# reincheck

./: .crush.json  .gitignore  AGENTS.md  LICENSE  PRIME.md  README.md  TASK.md  agents.yaml  manifest  myagents  myagents.py  pyproject.toml  qduutkgvq5h2pscachh1ndvdtcv8iqnd.darc  rc
.beads/: PRIME.md  config.yaml  dolt-monitor.pid  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.perles/: config.yaml
docs/: agentconfig-dependency-audit.md  preset-rationale.md  setup-design.md  setup.md
docs/adr/: 004-tui-library-selection.md
reincheck/: __init__.py  adapter.py  agents.json  agents.yaml  agents.yaml.20251223  commands.py  config.py  data_loader.py  errors.py  execution.py  installer.py  json_parser.py  migration.py  paths.py  release_notes.py  tui.py  updates.py  versions.py
reincheck/commands/: __init__.py  check.py  install.py  list.py  release_notes.py  setup.py  update.py  upgrade.py  utils.py
reincheck/data/: dependencies.json  harnesses.json  methods.json  presets.json
reincheck/installer/: __init__.py  dependencies.py  installation.py  models.py  planning.py  resolution.py
reincheck/tui/: __init__.py  dependencies.py  harnesses.py  presets.py  resolution.py
research/47t/: SYNTHESIS.md
research/adq/: DISTILLED.md  DISTILLED.yaml  chatgpt.md  (+2 more)
tests/: __init__.py  conftest.py  test_adapter.py  test_commands.py  test_config.py  test_config_safety.py  test_data_loader.py  test_installer.py  test_setup_integration.py  test_tui.py  test_tui_resolution.py  test_versions.py
(+34 files in other folders)
