[project]
name = "reincheck"
version = "0.1.0"
description = "CLI tool to manage AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "questionary>=2.1.1",
]

[project.scripts]
reincheck = "reincheck.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.11.0",
    "pyyaml>=6.0.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnusedCallResult = "none"
reportAny = "none"
reportUnknownVariableType = "none"
reportExplicitAny = "none"
